# rust-axum-course

./: Cargo.toml
exemples/tests/: mod.rs  quick_dev.rs
src/: ctx.rs  error.rs  log.rs  main.rs  model.rs  quick_dev.rs
src/exemple/tests/: quick_dev.rs
src/exemples/tests/: quick_dev.rs
src/web/: mod.rs  mw_auth.rs  routes_login.rs  routes_tickets.rs
tests/: quick_dev.rs
