[package]
name = "rust-axum-course"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio ={ version="1", features = ["full"]}
axum = { version = "0.6", features = ["macros"] }
serde = { version = "1", features = ["derive"]}
serde_json = "1"
tower-http ={ version = "0.4", features = ["fs"]}
tower-cookies = "0.9"
lazy-regex = "2"
async-trait = "0.1"
uuid ={ version = "1", features = ["v4", "fast-rng",]}
strum_macros = "0.24"

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"